--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "express": "^4.18.2",
     "mongodb": "^6.2.0",
     "node-cache": "^5.1.2",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
-    "sanitize-html": "^2.11.0"
+    "sanitize-html": "^2.11.0",
+    "validator": "^13.11.0"
   }
 }
